# algorithms-c

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  xmake.lua
data-structure/: linear_list.c
data-structures/: sqlist.c
examples/: d_linear_list.c
include/: type.h  util.h  utils.h
include/ds/: arrat_list.h  array.h  array_queue.h  array_stack.h  binary_tree.h  hashmap.h  hashmap_oa.h  hashmap_sc.h  linked_list.h  linked_queue.h  linked_stack.h  list.h  sqlist.h  static_linked_list.h  vec.h  vector.h
include/sort/: bubble.h  insertion.h  merge.h  quick.h  selection.h
include/string/: brute_force.h
sorting/: bubble_sort.c
sorting-algorithms/: bubble-sort.c
src/: CMakeLists.txt  util.c  utils.c
src/data_structure/: CMakeLists.txt
src/ds/: array.c  array_list.c  array_queue.c  array_stack.c  binary_tree.c  hashmap.c  hashmap_oa.c  hashmap_sc.c  linked_list.c  linked_queue.c  linked_stack.c  list.c  sqlist.c  static_linked_list.c  vec.c  vector.c
test/: CMakeLists.txt  data.h  helper.c  helper.h  test.c  test.h  test_helper.c  test_helper.h  test_util.c  test_utils.c  utils.c
test/ds/: test_array.c  test_array_list.c  test_array_queue.c  test_array_stack.c  test_binary_tree.c  test_hashmap.c  test_hashmap_oa.c  test_hashmap_sc.c  test_linked_list.c  test_linked_queue.c  test_linked_stack.c  test_list.c  test_sqlist.c  test_static_linked_list.c  test_vec.c  test_vector.c
test/sort/: bubble.c  bubble_sort.c  sort.c  test_bubble.c  test_insertion.c  test_merge.c  test_quick.c  test_selection.c
test/string/: test_brute_force.c
(+9 files in other folders)
